[package]
name = "lip"
version = "7.0.0"
authors = ["Kevin Li <kevinli020508@gmail.com>"]
edition = "2018"
description = "Lip provides powerful parser combinators for creating reusable and flexible parsers."
keywords = ["parser", "combinator", "functional"]
license = "MIT"
repository = "https://github.com/AlienKevin/lip"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
unicode-width = "0.1.9"
xi-unicode = "0.3.0"
itertools = "0.10.3"
